--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tyler Ransom by tyleransom</title>
+    <title>Hongzhen's Personal Website</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -82,34 +82,40 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tyler Ransom</h1>
+        <h1>Tyler Ransom</h1> 
         <p>Associate Professor of Economics<br>University of Oklahoma</p>
-        <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Institute for the Study of Labor (IZA)</a></p>
-    <h3><a href="https://tyleransom.github.io/">Home</a></h3>
-        <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://tyleransom.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://tyleransom.github.io/personal.html">Personal</a></h3>
+        <p>Postgraduation University<br><a href="http://www.tju.edu.cn/english/index.htm">Tianjin University(TJU)</a></p>
+        <p>Undergraduation University<br><a href="https://en.xmu.edu.cn/">Xiamen University(XMU)</a></p>
+    <h3><a href="https://tyleransom.github.io/">About Me</a></h3>
+        <h3><a href="https://hongzhengit.github.io/research.html">Research Experience</a></h3>
+    <h3><a href="https://hongzhengit.github.io/research/CV.pdf">CV/Resume</a></h3>  
+        <h3><a href="https://hongzhengit.github.io/code.html">Project Reporsitory</a></h3> 
+        <h3><a href="https://hongzhengit.github.io/teaching.html">Working Experience</a></h3> 
+        <h3><a href="https://hongzhengit.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
-          <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-          <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
-          <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
-          <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>
-          <a href="http://github.com/tyleransom"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-          <a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
+          <!--<a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>-->
+          <!--<a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>-->
+          <!--<a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>-->
+          <!--<a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>-->
+          <a href="https://github.com/HongzhenGit"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
+          <!--<a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>-->
           <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
           <br>
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Department of Economics<br>University of Oklahoma<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
+    <p><b>Contact Information:</b><br>Email: zhanghongzhen1019@outlook.com<br>Phone Number: 86-18765801028</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-      <img src="IMG_2409_edit_pro_photo_square_small.jpg" height="250" width="250" alt="Tyler Ransom"></h3>
-      <p>I am currently an Associate Professor of <a href="http://www.ou.edu/cas/economics">Economics</a> at the <a href="http://www.ou.edu/">University of Oklahoma</a> and Research Affiliate at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in May 2015.</p>
+      <img src="IMG_2409_edit_pro_photo_square_small.jpg" height="200" width="200" alt="Tyler Ransom"></h3>
+      <p>I am currently looking for a Phd position in disciplines of Statistics, Physics or Electrical Engineering. During the last two and a half years, 
+        I was working as a data analyst at Discover Financial Service, a fin-tech and card issuer company of USA. Before I joined DFS, I was a algorithm intern
+      at Analog Devices wokring on the parameter selection of GMP(Generalized Memory Polynomial) model in DPD conpensation.</p>
+      <p>I got my Master's degree of engineering at Tianjin University. At that time, my research was mainly focusing on the applications of heuristic algorithms 
+        in the information extraction from the time and frequency spectroscopy of magnetic waves(in T-hertz Range).<p>
+      <p>During my undergraduation years at Xiamen University,.<p>
       <p>My research interests include labor economics, urban economics, the economics of education, and applications of machine learning.</p>
       </section>
     </div>
