--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@
       at Analog Devices wokring on the parameter selection of GMP(Generalized Memory Polynomial) model in DPD conpensation.</p>
       <p>I got my Master's degree of engineering at Tianjin University. At that time, my research was mainly focusing on the applications of heuristic algorithms 
         in the information extraction from the time and frequency spectroscopy of magnetic waves(in T-hertz Range).<p>
-      <p>During my undergraduation years at Xiamen University,.<p>
-      <p>My research interests include labor economics, urban economics, the economics of education, and applications of machine learning.</p>
+      <p>I got my bachelor's degree of enginnering majoring in Measurement Technologies and Instruments(a EE-like major) and a double degree of economics minoring in Mathematical 
+        Statistics at Xiamen University. During my undergraduation years, I did research for the first time in the assisting therapy device for meibomian of human eyes. I also won
+      a first prize(UG group) of China National Mathematical Modeling Competition.<p>
+      <p>My research interests include Heuristic Algorithms(GA, DE..), the application of LASSO in signal processing and time series.</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
