--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <!--<a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>-->
           <a href="https://github.com/HongzhenGit"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
           <!--<a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>-->
-          <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
+          <a href="https://www.linkedin.com/in/hongzhen-zhang-2a8126193/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
           <br>
         </div>
         <br>
@@ -109,15 +109,15 @@
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-      <img src="IMG_2409_edit_pro_photo_square_small.jpg" height="200" width="200" alt="Tyler Ransom"></h3>
+      <img src="Personal Photo.jpg" height="200" width="200" alt="Hongzhen"></h3>
       <p>I am currently looking for a Phd position in disciplines of Statistics, Physics or Electrical Engineering. During the last two and a half years, 
-        I was working as a data analyst at Discover Financial Service, a fin-tech and card issuer company of USA. Before I joined DFS, I was a algorithm intern
-      at Analog Devices wokring on the parameter selection of GMP(Generalized Memory Polynomial) model in DPD conpensation.</p>
+         I was working as a data analyst at Discover Financial Service, a fin-tech and card issuer company of USA. Before I joined DFS, I was a algorithm intern
+         at Analog Devices wokring on the parameter selection of GMP(Generalized Memory Polynomial) model in DPD conpensation.</p>
       <p>I got my Master's degree of engineering at Tianjin University. At that time, my research was mainly focusing on the applications of heuristic algorithms 
-        in the information extraction from the time and frequency spectroscopy of magnetic waves(in T-hertz Range).<p>
+         in the information extraction from the time and frequency spectroscopy of magnetic waves(in T-hertz Range).<p>
       <p>I got my bachelor's degree of enginnering majoring in Measurement Technologies and Instruments(a EE-like major) and a double degree of economics minoring in Mathematical 
-        Statistics at Xiamen University. During my undergraduation years, I did research for the first time in the assisting therapy device for meibomian of human eyes. I also won
-      a first prize(UG group) of China National Mathematical Modeling Competition.<p>
+         Statistics at Xiamen University. During my undergraduation years, I did research for the first time in the assisting therapy device for meibomian of human eyes. I also won
+         a first prize(UG group) of China National Mathematical Modeling Competition.<p>
       <p>My research interests include Heuristic Algorithms(GA, DE..), the application of LASSO in signal processing and time series.</p>
       </section>
     </div>
