--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tyler Ransom</h1> 
-        <p>Associate Professor of Economics<br>University of Oklahoma</p>
+        <h1>ZHANG, Hongzhen</h1> 
+        <p>Senior Data Analyst<br>Discover Financial Service</p>
         <p>Postgraduation University<br><a href="http://www.tju.edu.cn/english/index.htm">Tianjin University(TJU)</a></p>
         <p>Undergraduation University<br><a href="https://en.xmu.edu.cn/">Xiamen University(XMU)</a></p>
     <h3><a href="https://tyleransom.github.io/">About Me</a></h3>
