--- a/teaching.html
+++ b/teaching.html
@@ -4,7 +4,7 @@
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tyler Ransom by tyleransom</title>
+    <title>Hongzhen's Personal Website</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -82,29 +82,29 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tyler Ransom</h1>
-        <p>Associate Professor of Economics<br>University of Oklahoma</p>
-        <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Institute for the Study of Labor (IZA)</a></p>
-    <h3><a href="https://tyleransom.github.io/">Home</a></h3>
+        <h1>ZHANG, Hongzhen</h1>
+        <p>Senior Data Analyst<br>Discover Financial Service</p>
+        <p>Postgraduation University<br><a href="http://www.tju.edu.cn/english/index.htm">Tianjin University(TJU)</a></p>
+    <h3><a href="https://tyleransom.github.io/">About Me</a></h3>
         <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://tyleransom.github.io/teaching.html">Teaching</a></h3> 
+    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV/Resume</a></h3>  
+        <h3><a href="https://tyleransom.github.io/code.html">Project Reporsitory</a></h3> 
+        <h3><a href="https://tyleransom.github.io/teaching.html">Working Experience</a></h3> 
         <h3><a href="https://tyleransom.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
-          <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-          <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
-          <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
-          <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>
-          <a href="http://github.com/tyleransom"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-          <a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
-          <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
+          <!--<a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>-->
+          <!--<a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>-->
+          <!--<a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>-->
+          <!--<a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>-->
+          <a href="https://github.com/HongzhenGit"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
+          <!--<a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>-->
+          <a href="https://www.linkedin.com/in/hongzhen-zhang-2a8126193/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
           <br>
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Department of Economics<br>University of Oklahoma<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
+    <p><b>Contact Information:</b><br>Email: zhanghongzhen1019@outlook.com<br>Phone Number: 86-18765801028</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
 
       </header>
@@ -112,21 +112,25 @@
       <!-- <h2>Teaching Statement</h2> -->
       <!-- <p><a href="https://tyleransom.github.io/teaching/Teaching-Statement.pdf">Download (PDF)</a><br></p> -->
       
-      <h2>Teaching Experience</h2>
-      <p><a href="https://tyleransom.github.io/teaching/EvalsSummary.pdf">Overall Summary of Teaching Evaluations</a></p>
+      <h2>Working Experience</h2>
+      <!--<p><a href="https://tyleransom.github.io/teaching/EvalsSummary.pdf">Overall Summary of Teaching Evaluations</a></p>-->
+      <p>Here lists some key peoject experiences of mine</a></p>
      
       <hr />
-      <h3>Instructor and Designer</h3>
-      <h4><b>Econ 4970/4523: Economics of Education (University of Oklahoma, Fall 2017, Spring 2018, Fall 2018, Fall 2019)</b></h4>
-      Undergraduate course on causal inference and policy debates in the US education system
+      <!--<h3>Instructor and Designer</h3>-->
+      <h4><b>Volume Forecast of Home Loan Applications(DFS, 02.2022 - 05.2022)</b></h4>
+      Make forecast on future loan application volumes. This project is raised mainly becasue of the significant increase in house price in USA during 2021. This huge
+      increase in house price brings a boost in home equity, which contributed a lot to the momentum for home equity loan applications. To handle a large apllication volume, 
+      more stuff are needed to process these loans. In other words, a forecast of future volume is required to decide how many agents that need to be hired.  
       <ul>
-       <li><a href="https://www.amazon.com/Economics-Education-Michael-Lovenheim/dp/0716777045">Textbook</a></li>
-       <li><a href="https://tyleransom.github.io/research/LectureCollegeMajorChoiceCh15p2.pdf">Slides on college major choice & consequences</a></li>
-       <li><a href="https://tyleransom.github.io/research/TenPrinciplesOfEconOfEd.pdf">10 Principles of the Economics of Education</a></li>
-       <li>Student course evaluations (<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsF17.pdf">Fall 2017</a>,<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsS18.pdf">Spring 2018</a>,<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsF18.pdf">Fall 2018</a>,<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsF19.pdf">Fall 2019</a>)</li>
-       <li>Other course materials available upon request</li>
+       <li>Data preparation and pre-processing(resample the data, fill up null values, remove outliers).</li>
+       <li>Correlation anlysis to get the extra regressors that may help improve the model explanation capability.</li>
+       <li>Model training and validation based on Prophet Package(Developed by Meta Open Source).</li>
+       <li>Make predictions on future volumes and estimate the number of agents that need to be hired.</li>
+       <li>Here is a similar and simpler project based on public dataset(<a href="https://github.com/HongzhenGit/Time-Series-Forecasting">Forecast on electricity demand in AUS</a>)</li>
+       <!--<li><a href="https://tyleransom.github.io/research/TenPrinciplesOfEconOfEd.pdf">10 Principles of the Economics of Education</a></li>-->
       </ul>
-      <h4><b>Econ 5970/5253: Data Science for Economists (University of Oklahoma, Spring 2018, Spring 2019, Spring 2020, Spring 2021)</b></h4>
+      <h4><b>NLP research on Customers Compliants (University of Oklahoma, Spring 2018, Spring 2019, Spring 2020, Spring 2021)</b></h4>
       Master's course designed to build data science skills from the perspective of economics
       <ul>
        <li>Course GitHub repository (<a href="https://github.com/tyleransom/DScourseS18">Spring 2018</a>,<a href="https://github.com/tyleransom/DScourseS19">Spring 2019</a>,<a href="https://github.com/tyleransom/DScourseS20">Spring 2020</a>,<a href="https://github.com/tyleransom/DScourseS21">Spring 2021</a>),<a href="https://github.com/tyleransom/DScourseS22">Spring 2022</a>)</li>
