--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <p>Senior Data Analyst<br>Discover Financial Service</p>
         <p>Postgraduation University<br><a href="http://www.tju.edu.cn/english/index.htm">Tianjin University(TJU)</a></p>
         <p>Undergraduation University<br><a href="https://en.xmu.edu.cn/">Xiamen University(XMU)</a></p>
-    <h3><a href="https://tyleransom.github.io/">About Me</a></h3>
+    <h3><a href="https://hongzhengit.github.io/">About Me</a></h3>
         <h3><a href="https://hongzhengit.github.io/research.html">Research Experience</a></h3>
     <h3><a href="https://hongzhengit.github.io/research/CV.pdf">CV/Resume</a></h3>  
         <h3><a href="https://hongzhengit.github.io/code.html">Project Reporsitory</a></h3> 
