--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
     <h3><a href="https://hongzhengit.github.io/">About Me</a></h3>
         <h3><a href="https://hongzhengit.github.io/research.html">Research Experience</a></h3>
     <h3><a href="https://hongzhengit.github.io/research/CV.pdf">CV/Resume</a></h3>  
-        <h3><a href="https://hongzhengit.github.io/code.html">Project Reporsitory</a></h3> 
+        <!--<h3><a href="https://hongzhengit.github.io/code.html">Project Reporsitory</a></h3>--> 
         <h3><a href="https://hongzhengit.github.io/teaching.html">Working Experience</a></h3> 
-        <h3><a href="https://hongzhengit.github.io/personal.html">Personal</a></h3>
+        <!--<h3><a href="https://hongzhengit.github.io/personal.html">Personal</a></h3>-->
     <b>Social</b><br>
         <div class="social-row">
           <!--<a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>-->
