--- a/research.html
+++ b/research.html
@@ -117,9 +117,9 @@
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://www.sciencedirect.com/science/article/abs/pii/S0030401821008464">
       Extension of terahertz time-domain spectroscopy: A micron-level thickness gauging technology</a> <br> with SHI Lili and HE Mingxia <br> 
       <i>Optics Communications</i>, Published. <br>
-      <!--<button class="accordion">--> 
+      <button class="accordion">
     Abstract   
-    <!--</button>-->   
+    </button> 
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
       <p> There is a minimum measurable thickness when gauging micron-level coating films with time-of-flight based terahertz thickness measurement technologies. To improve this minimum measurable limit, 
         a time-domain model of terahertz signals is derived by considering multiple reflected pulses, using the Differential Evolution algorithm to calibrate parameters automatically. 
