--- a/research.html
+++ b/research.html
@@ -5,7 +5,7 @@
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tyler Ransom by tyleransom</title>
+    <title>Hongzhen's Personal Website</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -87,19 +87,18 @@
         <p>Postgraduation University<br><a href="http://www.tju.edu.cn/english/index.htm">Tianjin University(TJU)</a></p>
         <p>Undergraduation University<br><a href="https://en.xmu.edu.cn/">Xiamen University(XMU)</a></p>
     <h3><a href="https://hongzhengit.github.io/">About Me</a></h3>
-        <h3><a href="https://hongzhengit.github.io/research.html">Research Experience</a></h3>
+        <h3><a href="https://hongzhengit.github.io/research.html">Research</a></h3>
     <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV/Resume</a></h3>  
         <!--<h3><a href="https://hongzhengit.github.io/code.html">Project Reporsitory</a></h3>--> 
         <h3><a href="https://hongzhengit.github.io/teaching.html">Working Experience</a></h3> 
         <!--<h3><a href="https://hongzhengit.github.io/personal.html">Personal</a></h3>-->
     <b>Social</b><br>
         <div class="social-row">
-          <!--<a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>-->
-          <!--<a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>-->
-          <!--<a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>-->
-          <!--<a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>-->
+          <!--<a href="https://scholar.google.com/..." target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>-->
+          <!--<a href="https://orcid.org/..."><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>-->
+          <!--<a href="http://ideas.repec.org/..."><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>-->
           <a href="https://github.com/HongzhenGit"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-          <!--<a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>-->
+          <!--<a href="http://twitter.com/..." class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>-->
           <a href="https://www.linkedin.com/in/hongzhen-zhang-2a8126193/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
           <br>
         </div>
@@ -112,14 +111,13 @@
       <section>
 
     <hr>
-
     <h2><a id="published-papers-updated" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Published Papers</h2>
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://www.sciencedirect.com/science/article/abs/pii/S0030401821008464">
       Extension of terahertz time-domain spectroscopy: A micron-level thickness gauging technology</a> <br> with SHI Lili and HE Mingxia <br> 
     <i>Optics Communications</i>, Published.<br>
-    <!--<button class="accordion">-->
-    Abstract   
-    <!--</button>--> 
+    <button class="accordion">
+     Abstract   
+    </button> 
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
       <p> There is a minimum measurable thickness when gauging micron-level coating films with time-of-flight based terahertz thickness measurement technologies. To improve this minimum measurable limit, 
         a time-domain model of terahertz signals is derived by considering multiple reflected pulses, using the Differential Evolution algorithm to calibrate parameters automatically. 
@@ -127,8 +125,9 @@
         thicknesses of micron-level coating layers could be measured even if the Signal to Noise Ratio is not large enough, and the minimum measurable limit is also improved to about 40μm. 
         Experiments also demonstrate that, during drying processes, the time gaps between pulses reflected from different interfaces shrink and the thicknesses change in an exponential trend, 
         which reveals the potential of terahertz technologies in terms of monitoring coating processes </p></div>
-    <p style="margin:0"><button class="accordion">
-      Project Repository 
+    <p style="margin:0">
+    <button class="accordion">
+     Project Repository 
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://github.com/HongzhenGit/Modeling-For-Magnetic-Waves">The mathematical model for magnetic waves in the frequency domain</a> </p></div>
     <!--<p style="margin:0"><button class="accordion">-->
@@ -137,7 +136,7 @@
       Terahertz thickness measurement based on stochastic optimization algorithm</a> <br> with HE Mingxia, SHI Lili and WANG Pengfei <br> 
     <i>Spectroscopy and Spectral Analysis</i>, Published.<br>
     <button class="accordion"> 
-    Abstract
+     Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
       <p>Coating is an indispensable process in automobile, marine, aerospace manufacturing and other industries. Reasonable film thickness is not only conducive to the stability of painting quality, but also conducive to saving paint and reducing painting cost. 
@@ -151,8 +150,9 @@
         although the method can find the flight time of each reflection pulse in the terahertz measurement signal of many layers of samples, it is impossible to distinguish which reflection interface the reflection pulse comes from, so that the thickness of each layer coating cannot be solved. 
         The analysis shows that the thickness measurement method based on the time-of-flight principle is simple and easy, and the thickness of the single-layer sample can be measured more accurately, which is not sensitive to the angle error. When expanding to the measurement of multi-layer samples, 
         the method has greater limitations. It is impossible to distinguish multiple reflection pulses in the time domain, and is not feasible to calculate the thickness of each layer. </p></div>
-    <p style="margin:0"><button class="accordion">
-      Project Repository 
+    <p style="margin:0">
+    <button class="accordion">
+     Project Repository 
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://github.com/HongzhenGit/Modeling-For-Magnetic-Waves">Mathematical Model for magnetic waves in the time domain</a> </p></div>
     <!--<p style="margin:0"><button class="accordion">-->
