--- a/teaching.html
+++ b/teaching.html
@@ -87,19 +87,18 @@
         <p>Postgraduation University<br><a href="http://www.tju.edu.cn/english/index.htm">Tianjin University(TJU)</a></p>
         <p>Undergraduation University<br><a href="https://en.xmu.edu.cn/">Xiamen University(XMU)</a></p>
         <h3><a href="https://hongzhengit.github.io/">About Me</a></h3>
-        <h3><a href="https://hongzhengit.github.io/research.html">Research Experience</a></h3>
+        <h3><a href="https://hongzhengit.github.io/research.html">Research</a></h3>
         <h3><a href="https://hongzhengit.github.io/research/CV.pdf">CV/Resume</a></h3>  
         <!--<h3><a href="https://hongzhengit.github.io/code.html">Project Reporsitory</a></h3>--> 
-        <h3><a href="https://hongzhengit.github.io/teaching.html">Working Experience</a></h3> 
+        <h3><a href="https://hongzhengit.github.io/working.html">Working Experience</a></h3> 
         <!--<h3><a href="https://hongzhengit.github.io/personal.html">Personal</a></h3>-->
     <b>Social</b><br>
         <div class="social-row">
-          <!--<a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>-->
-          <!--<a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>-->
-          <!--<a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>-->
-          <!--<a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>-->
+          <!--<a href="https://scholar.google.com/..." target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>-->
+          <!--<a href="https://orcid.org/..."><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>-->
+          <!--<a href="http://ideas.repec.org/..."><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>-->
           <a href="https://github.com/HongzhenGit"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-          <!--<a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>-->
+          <!--<a href="http://twitter.com/..." class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>-->
           <a href="https://www.linkedin.com/in/hongzhen-zhang-2a8126193/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
           <br>
         </div>
