--- a/research.html
+++ b/research.html
@@ -161,20 +161,26 @@
 
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Invention Patents</h2>
 
-    <p style="margin:0"> <b>Beating the Heat: Temperature and Spatial Reallocation over the Long Run</b> <br> with <a href="https://www.christosmakridis.com/">Christos Makridis</a>. <br><button class="accordion">
-      Abstract
+    <p style="margin:0"> <b>A terahertz non-polar material detection technology based on Rouard’s Method</b> <br> 
+      Waiting for autorization, with HE Mingxia, SHI Lili, WANG Pu.<br>
+    <!--<button class="accordion">
+      Snapshot
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Does temperature affect real economic activity? Using the annual Current Population Survey between 1963 and 2015, we show that there is no association between temperature and earnings, hours, or output after controlling for time-invariant spatial heterogeneity and time-varying demographic factors. These results are robust to five separate sources of micro-data, different sampling horizons, functional forms, spatial measures of temperature, and subsets of the data. This paper studies the relationship between temperature and productivity across space and time. Motivated by these null results, we develop a spatial equilibrium model where temperature can affect not only firm productivity, but also individual locational choice. After calibrating the model, we use it to disentangle the role of reallocation versus actual productivity losses in the U.S. economy between 1980 and 2015. Nearly all of the variation is driven by reallocation. We subsequently use the model to evaluate a counterfactual climate scenario and recover a new spatial equilibrium for the U.S. economy by 2050. </p></div><br>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> ... </p></div><br>-->
 
-    <p style="margin:0"> <b>The Role of Supply and Demand Factors in Explaining the Migration of College Majors</b> <br> with <a href="https://www.linkedin.com/in/joel-p-t-mcguire/">Joel McGuire</a>. <br><button class="accordion">
-      Abstract
+    <p style="margin:0"> <b>A terahertz thickness measurement technology based on optimization algorithms</b> <br> 
+      Autorized, with HE Mingxia, SHI Lili, WANG Pu.<br> 
+    <button class="accordion">
+      Snapshot
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> This paper examines location as an outcome of college major choice. We document substantial differences in the spatial availability of college majors. These differences explain much of the cross-major variation in unemployment and migration, but not earnings. Using a natural experiment, we show that migration differences across majors appear to be driven by labor demand and not labor supply.</p></div><br>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://wenku.baidu.com/view/33c9116586868762caaedd3383c4bb4cf6ecb7cc?fr=xueshu">一种基于太赫兹脉冲频谱与最优化算法的涂层厚度测量方法</a> </p></div>
 
-    <p style="margin:0"> <b>Minorities in STEM: The Role of Ability Revelation</b> <br> with <a href="http://www.nickchk.com/">Nick Huntington-Klein</a>. <br><button class="accordion">
-      Abstract
+    <p style="margin:0"> <b>A multiple spectral device to detect the Meibomian glands of human eyes</b> <br> 
+      Autorized, with CHEN Yanping, ZHENG Tianyu, YANG, Yifan. <br>
+    <button class="accordion">
+      Snapshot
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Coming soon.</p></div><br>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://wenku.baidu.com/view/de1d9184541252d380eb6294dd88d0d232d43cb3?fr=xueshu">一种基于多光谱检测人眼睑板腺的装置及方法</a> </p></div>
 
       </section>
     </div>
