--- a/working.html
+++ b/working.html
@@ -121,7 +121,7 @@
       <h4><b>Volume Forecast of Home Loan Applications(DFS, 02.2022 - 05.2022)</b></h4>
       This project is raised mainly becasue of the significant increase in house price in USA during 2021. This 18% increase in house price brings a boost of $3.2 trillion in home equity, 
       which contributed a lot to the momentum for home equity loan applications. In this case, more stuff are needed to help on the applications due to this momentum. We built a time series model based 
-      on Prophet(Developed by Meta Open Source) and made predictions on future application volumes to help us estimate the number of newly hired agents that are required.
+      on Prophet(Developed by Meta Open Source) and made predictions on future application volumes to help us estimate the number of newly hired agents that are required.<br>
       Here is a similar and simpler project based on public dataset(<a href="https://github.com/HongzhenGit/Time-Series-Forecasting">Forecast on electricity demand in AUS</a>)
       <!--<ul>
        <li>Data preparation and pre-processing(resample the data, fill up null values, remove outliers).</li>
@@ -135,7 +135,8 @@
       With the continuous increase in market share that DFS products possess, lots of text comments(or voice transcripts) are received by our agents, which include feedbacks, general comments 
       and customer complaints. It is hard to review these text materials manually, so an automated document analysis tool is necessary to help on the analysis and classifications. We constructed 
       a binary classifer with pre-trained BERT to detect complaints from a large set of texts, and then took advantage of a Random Forest classifier to devide these complaints into a set of 
-      determined categories. For non-labeled complaints, a network-based community detection method is leveraged to analyse their natrual clusters.
+      determined categories. For non-labeled complaints, a network-based community detection method is leveraged to analyse their natrual clusters.<br>
+      Here is a similar and simpler project based on public dataset(<a href="https://github.com/HongzhenGit/NLP-Research">One VS Rest Document Classifier</a>)
       <!--<ul>
        <li>Text preprocessing(Remove punctuations and stopwords, Word Steming or Lemmatization..)  </li>
        <li>Build a binary classifier based on BERT to detect complaints</li>
@@ -154,6 +155,7 @@
        <li>Research on LASSO solution path</li>
        <li>A reference for complex lasso(<a href="https://doi.org/10.1121/1.5042363 ">Muhammad Naveed Tabassum and Esa Ollila</a>)</li>
       </ul>-->
+      <br>
       <hr />
       <h3 style="margin-top:2px margin-bottom:6px">Other Projects</h3>
       <h4 style="margin-top:6px">Data Management Platform developed with PyQt(DFS, 08.2020 - 01.2021)</h4>
