--- a/working.html
+++ b/working.html
@@ -91,7 +91,7 @@
         <h3><a href="https://hongzhengit.github.io/research/CV.pdf">CV/Resume</a></h3>  
         <!--<h3><a href="https://hongzhengit.github.io/code.html">Project Reporsitory</a></h3>--> 
         <h3><a href="https://hongzhengit.github.io/working.html">Working Experience</a></h3> 
-        <!--<h3><a href="https://hongzhengit.github.io/personal.html">Personal</a></h3>-->
+        <h3><a href="https://hongzhengit.github.io/awards.html">Awards</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <!--<a href="https://scholar.google.com/..." target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>-->
