--- a/awards.html
+++ b/awards.html
@@ -4,7 +4,7 @@
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tyler Ransom by tyleransom</title>
+    <title>Hongzhen's Personal Website</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -18,7 +18,6 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
       ga('create', 'UA-29643011-3', 'auto');
       ga('send', 'pageview');
     </script>
@@ -82,76 +81,62 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tyler Ransom</h1>
-        <p>Associate Professor of Economics<br>University of Oklahoma</p>
-        <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Institute for the Study of Labor (IZA)</a></p>
-    <h3><a href="https://tyleransom.github.io/">Home</a></h3>
-        <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://tyleransom.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://tyleransom.github.io/personal.html">Personal</a></h3>
+        <h1>ZHANG, Hongzhen</h1>
+        <p>Senior Data Analyst<br>Discover Financial Service</p>
+        <p>Postgraduation University<br><a href="http://www.tju.edu.cn/english/index.htm">Tianjin University(TJU)</a></p>
+        <p>Undergraduation University<br><a href="https://en.xmu.edu.cn/">Xiamen University(XMU)</a></p>
+    <h3><a href="https://hongzhengit.github.io/">About Me</a></h3>
+        <h3><a href="https://hongzhengit.github.io/research.html">Research</a></h3>
+    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV/Resume</a></h3>  
+        <!--<h3><a href="https://hongzhengit.github.io/code.html">Project Reporsitory</a></h3>--> 
+        <h3><a href="https://hongzhengit.github.io/working.html">Working Experience</a></h3> 
+        <h3><a href="https://hongzhengit.github.io/awards.html">Awards</a></h3>
     <b>Social</b><br>
         <div class="social-row">
-          <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-          <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
-          <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
-          <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>
-          <a href="http://github.com/tyleransom"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-          <a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
-          <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
+          <!--<a href="https://scholar.google.com/..." target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>-->
+          <!--<a href="https://orcid.org/..."><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>-->
+          <!--<a href="http://ideas.repec.org/..."><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>-->
+          <a href="https://github.com/HongzhenGit"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
+          <!--<a href="http://twitter.com/..." class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>-->
+          <a href="https://www.linkedin.com/in/hongzhen-zhang-2a8126193/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
           <br>
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Department of Economics<br>University of Oklahoma<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
+    <p><b>Contact Information:</b><br>Email: zhanghongzhen1019@outlook.com<br>Phone Number: 86-18765801028</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+
       </header>
       <section>
-      <!-- <h2>Teaching Statement</h2> -->
-      <!-- <p><a href="https://tyleransom.github.io/teaching/Teaching-Statement.pdf">Download (PDF)</a><br></p> -->
-      
-      <h2>Econometrics In-class Labs</h2>
 
-      <p><b><code>tidyverse</code> cheat sheet (<a href="https://github.com/tyleransom/EconometricsLabs/raw/master/tidyRcheatsheet.pdf">PDF</a>)</b></p>
+    <h2>Some Awards</h2>
+    <!--<p><a href="https://tyleransom.github.io/teaching/EvalsSummary.pdf">Overall Summary of Teaching Evaluations</a></p>-->
+    <p>Here are some awards I won during the past years</a></p>
+        
+    <hr>
 
-      <p> During most class periods, my introductory econometrics students work on labs in small groups (2-3 students). These are meant to introduce coding concepts and to gain hands-on experience with econometric estimators. Below is a complete list of labs, available in three different file formats. Labs are also available in a <a href="https://github.com/tyleransom/EconometricsLabs">GitHub repository</a> (see GitHub for license details).</p>
+    <p style="margin:0"> <b>Innovation Award in Discover Financial Service</b> <br> 
+      For my customer analysis project.<br>
 
-      <ol type="1">
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab1.html">Intro to R, basic data cleaning steps</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab1.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab1.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab1.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab2.html">Basic hypothesis testing and simple linear regression</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab2.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab2.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab2.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab3.html">More practice with bivariate linear regression: nonlinear transformations, visualization, formulas</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab3.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab3.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab3.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab4.html">Multivariate linear regression</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab4.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab4.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab4.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab5.html">Omitted variable bias and multicollinearity</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab5.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab5.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab5.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab6.html">Dummy variables and Linear Probability Models</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab6.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab6.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab6.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab7.html">Single hypothesis testing of regression parameters</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab7.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab7.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab7.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab8.html">Joint hypothesis testing of regression parameters</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab8.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab8.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab8.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab9.html">Heteroskedasticity-robust inference</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab9.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab9.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab9.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab10.html">Intro to time series data and serial correlation</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab10.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab10.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab10.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab11.html">How to use data from IPUMS and other R packages</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab11.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab11.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab11.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab12.html">Instrumental variables estimation</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab12.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab12.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab12.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab13.html">2SLS estimation</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab13.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab13.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab13.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab14.html">Time series forecasting</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab14.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab14.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab14.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab15.html">Pooled OLS, Random Effects, and Fixed Effects estimation</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab15.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab15.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab15.Rmd">R Markdown</a>
-
-      <li> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/teaching/MetricsLabs/lab16.html">Difference in Differences estimation</a> <br> <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab16.html">HTML</a> &nbsp; &nbsp; &nbsp;  <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab16.pdf">PDF</a>&nbsp; &nbsp; &nbsp; <a href="https://tyleransom.github.io/teaching/MetricsLabs/lab16.Rmd">R Markdown</a>
-      </ol>
- </section>
+    <p style="margin:0"> <b>Excellence Award in Discover Financial Service</b> <br> 
+      For my contributions during 2020 and 2021.<br> 
+ 
+    <p style="margin:0"> <b>First prize of National Mathematical Modeling Competition(undergraduate group)</b> <br> 
+      We team(3 members) won this prize in 2015.<br>
+   
+      </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
+    <script> 
+    var acc = document.getElementsByClassName("accordion");
+    var i;
+
+    for (i = 0; i < acc.length; i++) {
+        acc[i].onclick = function(){
+            this.classList.toggle("active");
+            this.parentNode.nextElementSibling.classList.toggle("show");
+      }
+    }
+    </script>
   </body>
 </html>
