--- a/awards.html
+++ b/awards.html
@@ -116,7 +116,7 @@
     <hr>
 
     <p style="margin:0"> <b>Innovation Award in Discover Financial Service</b> <br> 
-      For my customer analysis project.<br>
+      For my customer complaint analysis project.<br>
 
     <p style="margin:0"> <b>Excellence Award in Discover Financial Service</b> <br> 
       For my contributions during 2020 and 2021.<br> 
