--- a/research.html
+++ b/research.html
@@ -166,24 +166,24 @@
 
     <p style="margin:0"> <b>A terahertz non-polar material detection technology based on Rouard’s Method</b> <br> 
       Waiting for autorization, with HE Mingxia, SHI Lili, WANG Pu.<br>
-    <!--<button class="accordion">
+    <button class="accordion">
       Snapshot
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> ... </p></div><br>-->
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://xueshu.baidu.com/usercenter/paper/show?paperid=1b0d0vh0qa3a06k0u51k0830we574294&site=xueshu_se">一种基于Rouard方法与太赫兹脉冲频谱的非极性材料检测方法</a> </p></div><br>
 
     <p style="margin:0"> <b>A terahertz thickness measurement technology based on optimization algorithms</b> <br> 
       Autorized, with HE Mingxia, SHI Lili, WANG Pu.<br> 
     <button class="accordion">
       Snapshot
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://wenku.baidu.com/view/33c9116586868762caaedd3383c4bb4cf6ecb7cc?fr=xueshu">一种基于太赫兹脉冲频谱与最优化算法的涂层厚度测量方法</a> </p></div>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://xueshu.baidu.com/usercenter/paper/show?paperid=19210830cv7a0p302f140e707r051772&site=xueshu_se">一种基于太赫兹脉冲频谱与最优化算法的涂层厚度测量方法</a> </p></div>
 
     <p style="margin:0"> <b>A multiple spectral device to detect the Meibomian glands of human eyes</b> <br> 
       Autorized, with CHEN Yanping, ZHENG Tianyu, YANG, Yifan. <br>
     <button class="accordion">
       Snapshot
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://wenku.baidu.com/view/de1d9184541252d380eb6294dd88d0d232d43cb3?fr=xueshu">一种基于多光谱检测人眼睑板腺的装置及方法</a> </p></div>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://xueshu.baidu.com/usercenter/paper/show?paperid=1y2p06e0fn310mc027780g003a088831&site=xueshu_se&hitarticle=1">一种基于多光谱检测人眼睑板腺的装置及方法</a> </p></div>
 
       </section>
     </div>
