--- a/working.html
+++ b/working.html
@@ -148,7 +148,7 @@
       Generalized Memory Polynomial(GMP) Model is a widely-used compensation structure in Digital Pre-Distortion. To get a desirable improvment in linearity, a GMP model could be very complex,
       which means lots of circuit components need to be embeded on one chip. To reduce cost and simplify the structure of DPD, a good solution is to only keep those featrues that have significant impact on the compensation of linearity. 
       However, DPD is working on the frequency domain and the signal data used to build GMP model are complex numbers. To deal with this issue, We did research into the gradient descent and Gauss-Newton method in complex domain to help us estimate the parameters of a standard GMP model, 
-      and leveraged the method mentiond in <a href="https://doi.org/10.1121/1.5042363 ">Muhammad Tabassum and Esa Ollila</a> to get a sparse version of GMP model.
+      and leveraged the method mentiond in <a href="https://doi.org/10.1121/1.5042363 ">Muhammad Tabassum and Esa Ollila</a> to get a sparse version of GMP model.<br>
       <!--<ul>
        <li>Gradient Descent and Gauss-Newton Method in the complex domain</li>
        <li>LASSO regression in the complex domain</li>
