--- a/awards.html
+++ b/awards.html
@@ -117,11 +117,11 @@
 
     <p style="margin:0"> <b>Innovation Award in Discover Financial Service</b> <br> 
       For my customer complaint analysis project.<br>
-
+    <br>
     <p style="margin:0"> <b>Excellence Award in Discover Financial Service</b> <br> 
       For my contributions during 2020 and 2021.<br> 
- 
-    <p style="margin:0"> <b>First prize of National Mathematical Modeling Competition(undergraduate group)</b> <br> 
+    <br> 
+    <p style="margin:0"> <b>First prize of National Mathematical Modeling Competition(UG Group)</b> <br> 
       We team(3 members) won this prize in 2015.<br>
    
       </section>
