--- a/working.html
+++ b/working.html
@@ -122,7 +122,7 @@
       This project is raised mainly becasue of the significant increase in house price in USA during 2021. This 18% increase in house price brings a boost of $3.2 trillion in home equity, 
       which contributed a lot to the momentum for home equity loan applications. In this case, more stuff are needed to help on the applications due to this momentum. We built a time series model based 
       on Prophet(Developed by Meta Open Source) and made predictions on future application volumes to help us estimate the number of newly hired agents that are required.<br>
-      Here is a similar and simpler project based on public dataset(<a href="https://github.com/HongzhenGit/Time-Series-Forecasting">Forecast on electricity demand in AUS</a>)
+      Here is a similar and simpler project based on public dataset(<a href="https://github.com/HongzhenGit/Time-Series-Forecasting">Forecast on electricity demand in AUS</a>)<br>
       <!--<ul>
        <li>Data preparation and pre-processing(resample the data, fill up null values, remove outliers).</li>
        <li>Correlation anlysis to get the extra regressors that may help improve the model explanation capability.</li>
@@ -131,12 +131,13 @@
        <li>Here is a similar and simpler project based on public dataset(<a href="https://github.com/HongzhenGit/Time-Series-Forecasting">Forecast on electricity demand in AUS</a>)</li>
        <!--<li><a href="https://tyleransom.github.io/research/TenPrinciplesOfEconOfEd.pdf">10 Principles of the Economics of Education</a></li>-->
       </ul>-->
+      <br>
       <h4><b>NLP research on Customers Complaints(DFS, 03.2021 - 07.2021)</b></h4>
       With the continuous increase in market share that DFS products possess, lots of text comments(or voice transcripts) are received by our agents, which include feedbacks, general comments 
       and customer complaints. It is hard to review these text materials manually, so an automated document analysis tool is necessary to help on the analysis and classifications. We constructed 
       a binary classifer with pre-trained BERT to detect complaints from a large set of texts, and then took advantage of a Random Forest classifier to devide these complaints into a set of 
       determined categories. For non-labeled complaints, a network-based community detection method is leveraged to analyse their natrual clusters.<br>
-      Here is a similar and simpler project based on public dataset(<a href="https://github.com/HongzhenGit/NLP-Research">One VS Rest Document Classifier</a>)
+      Here is a similar and simpler project based on public dataset(<a href="https://github.com/HongzhenGit/NLP-Research">One VS Rest Document Classifier</a>)<br>
       <!--<ul>
        <li>Text preprocessing(Remove punctuations and stopwords, Word Steming or Lemmatization..)  </li>
        <li>Build a binary classifier based on BERT to detect complaints</li>
@@ -144,6 +145,7 @@
        <li>Analyse non-labeled complaints with Community Detection Technology(Network Analysis)</li> 
        <li>Here is a similar and simpler project based on public dataset(<a href="https://github.com/HongzhenGit/NLP-Research">One VS Rest Document Classifier</a>)</li> 
       </ul>-->
+      <br>
       <h4><b>Feature Selection for Generalized Memory Polynomial(GMP) Model(ADI, 07.2019 - 01.2020)</b></h4>
       Generalized Memory Polynomial(GMP) Model is a widely-used compensation structure in Digital Pre-Distortion. To get a desirable improvment in linearity, a GMP model could be very complex,
       which means lots of circuit components need to be embeded on one chip. To reduce cost and simplify the structure of DPD, a good solution is to only keep those featrues that have significant impact on the compensation of linearity. 
