--- a/research.html
+++ b/research.html
@@ -87,7 +87,7 @@
         <p>Undergraduation University<br><a href="https://en.xmu.edu.cn/">Xiamen University(XMU)</a></p>
     <h3><a href="https://hongzhengit.github.io/">About Me</a></h3>
         <h3><a href="https://hongzhengit.github.io/research.html">Research</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV/Resume</a></h3>  
+    <h3><a href="https://hongzhengit.github.io/research/CV.pdf">CV/Resume</a></h3>  
         <!--<h3><a href="https://hongzhengit.github.io/code.html">Project Reporsitory</a></h3>--> 
         <h3><a href="https://hongzhengit.github.io/working.html">Working Experience</a></h3> 
         <h3><a href="https://hongzhengit.github.io/awards.html">Awards</a></h3>
