--- a/awards.html
+++ b/awards.html
@@ -87,7 +87,7 @@
         <p>Undergraduation University<br><a href="https://en.xmu.edu.cn/">Xiamen University(XMU)</a></p>
     <h3><a href="https://hongzhengit.github.io/">About Me</a></h3>
         <h3><a href="https://hongzhengit.github.io/research.html">Research</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV/Resume</a></h3>  
+    <h3><a href="https://hongzhengit.github.io/research/CV.pdf">CV/Resume</a></h3>  
         <!--<h3><a href="https://hongzhengit.github.io/code.html">Project Reporsitory</a></h3>--> 
         <h3><a href="https://hongzhengit.github.io/working.html">Working Experience</a></h3> 
         <h3><a href="https://hongzhengit.github.io/awards.html">Awards</a></h3>
@@ -121,8 +121,8 @@
     <p style="margin:0"> <b>Excellence Award in Discover Financial Service</b> <br> 
       For my contributions during 2020 and 2021.<br> 
     <br> 
-    <p style="margin:0"> <b>First prize of National Mathematical Modeling Competition(UG Group)</b> <br> 
-      We team(3 members) won this prize in 2015.<br>
+    <p style="margin:0"> <b>First prize of National Mathematical Modeling Competition</b> <br> 
+      We team(Undergraduation Group, 3 members including me) won this prize in 2015.<br>
    
       </section>
     </div>
