--- a/working.html
+++ b/working.html
@@ -129,7 +129,7 @@
        <li>Model training and validation based on Prophet Package(Developed by Meta Open Source).</li>
        <li>Make predictions on future volumes and estimate the number of agents that need to be hired.</li>
        <li>Here is a similar and simpler project based on public dataset(<a href="https://github.com/HongzhenGit/Time-Series-Forecasting">Forecast on electricity demand in AUS</a>)</li>
-       <!--<li><a href="https://tyleransom.github.io/research/TenPrinciplesOfEconOfEd.pdf">10 Principles of the Economics of Education</a></li>-->
+       <!--<li><a href="https://tyleransom.github.io/research/TenPrinciplesOfEconOfEd.pdf">10 Principles of the Economics of Education</a></li>
       </ul>-->
       <br>
       <h4><b>NLP research on Customers Complaints(DFS, 03.2021 - 07.2021)</b></h4>
